[gd_scene load_steps=7 format=3 uid="uid://bns8jtqabr3np"]

[ext_resource type="Texture2D" uid="uid://dcrbc462lfao5" path="res://Assets/UI/white_square.svg" id="1_kffw2"]
[ext_resource type="Script" path="res://Scenes/UI Scenes/carbon_footprint_bar.gd" id="1_v213f"]
[ext_resource type="Texture2D" uid="uid://co7djbkfqrb5t" path="res://Assets/UI/ProgressBar Frames/dark gray frame.svg" id="2_c47g6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7uo6a"]
bg_color = Color(0.301961, 0.301961, 0.301961, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.2, 0.2, 0.2, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ivo0a"]
font_size = 25
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_size = 15
shadow_color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_7atub"]
font_size = 25
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_size = 15
shadow_color = Color(1, 1, 1, 1)

[node name="CarbonFootprintBar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1836.0
offset_bottom = -622.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v213f")

[node name="Label_BG" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -12.0
offset_top = -138.0
offset_right = 108.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_7uo6a")

[node name="VBoxContainer" type="VBoxContainer" parent="Label_BG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="CarbonLabel" type="Label" parent="Label_BG/VBoxContainer"]
layout_mode = 2
text = "50"
label_settings = SubResource("LabelSettings_ivo0a")
horizontal_alignment = 1

[node name="Label3" type="Label" parent="Label_BG/VBoxContainer"]
layout_mode = 2
text = "_______"
label_settings = SubResource("LabelSettings_7atub")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CarbonMaxLabel" type="Label" parent="Label_BG/VBoxContainer"]
layout_mode = 2
text = "2500"
label_settings = SubResource("LabelSettings_ivo0a")
horizontal_alignment = 1

[node name="Control" type="Control" parent="Label_BG/VBoxContainer"]
layout_mode = 2

[node name="progress" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 10.0
offset_right = -8.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
value = 40.0
fill_mode = 3
nine_patch_stretch = true
texture_under = ExtResource("1_kffw2")
texture_progress = ExtResource("1_kffw2")
tint_under = Color(0.162066, 0.162066, 0.162066, 1)
tint_progress = Color(0.285849, 0.707058, 0, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_c47g6")
expand_mode = 1
